PROJECT(leetcode CXX)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(1/c++)
add_subdirectory(2/c++)
add_subdirectory(3/c++)
add_subdirectory(4/c++)
add_subdirectory(5/c++)
add_subdirectory(6/c++)
add_subdirectory(7/c++)
add_subdirectory(8/c++)
add_subdirectory(10/c++)
add_subdirectory(13/c++)
add_subdirectory(14/c++)
add_subdirectory(17/c++)
add_subdirectory(19/c++)
add_subdirectory(20/c++)
add_subdirectory(21/c++)
add_subdirectory(22/c++)
add_subdirectory(28/c++)
add_subdirectory(33/c++)
add_subdirectory(34/c++)
add_subdirectory(36/c++)
add_subdirectory(45/c++)
add_subdirectory(48/c++)
add_subdirectory(49/c++)
add_subdirectory(50/c++)
add_subdirectory(55/c++)
add_subdirectory(56/c++)
add_subdirectory(66/c++)
add_subdirectory(69/c++)
add_subdirectory(146/c++)
add_subdirectory(208/c++)
